# gatt_server_cpp

./: .gitignore  CMakeLists.txt  README.md
dbus/: org.bluez.GattCharacteristic1.xml  org.bluez.GattService1.xml  org.bluez.LEAdvertisement1.xml  org.bluez.MediaEndpoint1.xml
src/: GattServer.cpp  GattServer.h  Logger.h  main.cpp
web/: app.py
web/templates/: index.html
